fixed piv-187.  stretch glass to full width

--- a/drupal/sites/all/themes/pivot/sass/_pivot-homepage-hero.scss
+++ b/drupal/sites/all/themes/pivot/sass/_pivot-homepage-hero.scss
@@ -158,6 +158,7 @@
 .front .video-content-inner {
 	position: absolute;
 	bottom: 0;
+	width: 100%;
 }
 
 .front .video-content .promo img {
